@@ -1,0 +1,24 @@
+= form_for @application_setting, url: admin_application_settings_path, html: { class: 'form-horizontal fieldset-form' } do |f|
+  - if @application_setting.errors.any?
+    #error_explanation
+      .alert.alert-danger
+        - @application_setting.errors.full_messages.each do |msg|
+          %p= msg
+
+  %fieldset
+    %legend Default Project Settings
+    .form-group
+      .col-sm-offset-2.col-sm-10
+        .checkbox
+          = f.label :all_broken_builds do
+            = f.check_box :all_broken_builds
+            Send emails only on broken builds
+    .form-group
+      .col-sm-offset-2.col-sm-10
+        .checkbox
+          = f.label :add_pusher do
+            = f.check_box :add_pusher
+            Add pusher to recipients list
+
+  .form-actions
+    = f.submit 'Save', class: 'btn btn-primary'
