@@ -1,0 +1,3 @@
+%h3.page-title Settings
+%hr
+= render 'form'
