@@ -19,4 +19,10 @@
       Builds
       %small.pull-right
         = Build.count(:all)
- 
+  %li
+    %hr
+  = nav_link(controller: :application_settings, html_options: { class: 'separate-item'}) do
+    = link_to admin_application_settings_path do
+      %i.icon-cogs
+      %span
+        Settings
